Fix scroll on detail panel header
Adjusted typography variant to h2 so that header does not overflow.
Header does overflow with an underscore. This is fixed by setting
overflow-y to hidden. The underscore still shows as it is only
slightly overflowed, but the scrollbar is no longer visible.

--- a/src/views/DataView/components/DetailDrawer/DetailDrawer.scss
+++ b/src/views/DataView/components/DetailDrawer/DetailDrawer.scss
@@ -29,6 +29,10 @@
       overflow-x: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+
+      h2 {
+        overflow-y: hidden;
+      }
     }
 
     &::nth-child(2) {
